Fixes scrollbars appearing on wide images

--- a/modules/cms/widgets/mediamanager/assets/less/mediamanager.less
+++ b/modules/cms/widgets/mediamanager/assets/less/mediamanager.less
@@ -336,6 +336,10 @@ div[data-control="media-manager"] {
             .icon-message();
             margin-top: 25px;
         }
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .list-container {
